--- a/style/promo.css
+++ b/style/promo.css
@@ -21,6 +21,8 @@
   margin-bottom: 36px;
   max-width: 340px;
   line-height: 1.3;
+  animation: backInLeft;
+  animation-duration:2s;
 }
 .promo__list {
   margin-bottom: 64px;
@@ -81,6 +83,21 @@
   color: var(--seryy);
   max-width: 260px;
 }
+@keyframes backInLeft{
+ 0%{
+   transform: translateX(-500px) scale(0.7);
+   opacity: 0.7;
+ }
+ 80%{
+  transform: translateX(0) scale(0.7);
+   opacity: 0.7;
+ }
+ 100%{
+  transform: scale(1);
+  opacity: 1;
+ }
+}
+
 @media(min-width:768px){
   .promo {
     padding: 61px 0 80px 0;
